# INT-ACT

./: .gitignore  README.md  index.html  pyproject.toml
slurms/dataset_scripts/: convert_proprio.sh  resize_jpeg.sh  rlds2lerobot.sh  test_rlds_dataset.sh
src/agent/: run.py  trainer.py
src/experiments/envs/simpler/: pyproject.toml
src/experiments/policies/magma_policy_server/: pyproject.toml
src/experiments/policies/octo_policy_server/: pyproject.toml
