[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "INT-ACT"
version = "0.0.1"
readme = "README.md"
description = "Official repo of From Intention to Execution: Probing the Generalization Boundaries of Vision-Language-Action Models"
authors = [
    {name = "Irving Fang", email = "irving.fang@nyu.edu"},
    {name = "Juexiao Zhang", email = "juexiao.zhang@nyu.edu"}
]
requires-python = "==3.10.12"

dependencies = [
    "lerobot==0.4.0",
    "opencv-python>=4.11.0",
    "policy-server-client",
    "torch==2.6.0",
    "protobuf==3.20.3",
    "tensorflow>=2.19.1",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-graphics>=2021.12.3",
    "einops>=0.8.1",
    "draccus>=0.10.0",
    "bitsandbytes>=0.48.2",
]

[tool.ruff]
line-length = 170
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.uv.sources]
policy-server-client = { workspace = true }

[tool.uv.workspace]
members = ["packages/policy-server-client"]
